# robot-controller-interface

./: .gitignore  CMakeLists.txt  README.MD  README.md
config/: README.md
config/launch/: navigation_launch_ssl_robocup.py
config/map/: ssl_robocup_map.yaml
config/param/: nav2_params_ssl_robocup.yaml  to_pose_ssl.xml
docs/: Doxyfile  speedup simulation
docs/manual/: Raspberry pi guide.md  changelog.md  developer_guide.md  user_guide.md
src/: CMakeLists.txt  common_types.h  main.cc
src/.metadata/: .log4j2.xml  version.ini
src/.metadata/.plugins/org.eclipse.cdt.core/: robosoccer-stm32.language.settings.xml
src/.metadata/.plugins/org.eclipse.core.resources/.projects/hardware-interface/: .location  .markers
src/.metadata/.plugins/org.eclipse.core.resources/.projects/robosoccer-stm32/: .location  .markers
src/.metadata/.plugins/org.eclipse.core.resources/.projects/robosoccer-stm32/.indexes/: properties.index
src/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
src/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
src/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/hardware-interface/: .project  README.md  uart-communication-raspberrypi.cc
src/hardware-interface/.metadata/.plugins/org.eclipse.cdt.core/: robosoccer-stm32_2.language.settings.xml  stm32-code.language.settings.xml
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/robosoccer-stm32/: .markers  2.tree
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/robosoccer-stm32_2/: .location  .markers
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/robosoccer-stm32_2/.indexes/: properties.index
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/robosoccer-stm32_2/.indexes/af/: history.index
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/robosoccer-stm32_2/.indexes/bf/c4/: history.index
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/stm32-code/: .location  .markers
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/stm32-code/.indexes/: properties.index
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/stm32-code/.indexes/af/: history.index
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/stm32-code/.indexes/bf/c4/af/: history.index
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.projects/stm32-code/.indexes/bf/c4/af/61/: history.index
src/hardware-interface/.metadata/.plugins/org.eclipse.core.resources/.root/: 11.tree
src/hardware-interface/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
src/hardware-interface/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
src/hardware-interface/robosoccer-stm32/: robosoccer-stm32.txt
src/hardware-interface/robosoccer-stm32/Core/Src/: main.c
src/hardware-interface/robosoccer-stm32/Debug/: makefile  robosoccer-stm32.elf  robosoccer-stm32.list  robosoccer-stm32.map
src/hardware-interface/robosoccer-stm32/Debug/Core/Src/: main.cyclo  main.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.su
src/hardware-interface/robosoccer-stm32_2/: .cproject  .mxproject  .project  robosoccer-stm32_2 Debug.launch  robosoccer-stm32_2.ioc
src/hardware-interface/robosoccer-stm32_2/Core/Src/: main.c  stm32h7xx_hal_msp.c
src/hardware-interface/robosoccer-stm32_2/Debug/: makefile  robosoccer-stm32_2.elf  robosoccer-stm32_2.list  robosoccer-stm32_2.map
src/hardware-interface/robosoccer-stm32_2/Debug/Core/Src/: main.cyclo  main.su
src/individual-robot-behaviour/: CMakeLists.txt  ball.cc  ball.h  path_planning.cc  path_planning.h  state.cc  state.h  supporting.cc  supporting.h
src/path-planning/: CMakeLists.txt  path_planning.cc  path_planning.h
src/simulation-interface/: CMakeLists.txt  client.cc  client.h  simulation_interface.cc  simulation_interface.h  simulation_interface_demo.cc
src/simulation-interface/proto/: grSim_Packet.proto  grsim_commands.proto  grsim_packet.proto  grsim_replacement.proto
test/: CMakeLists.txt  main_test.cc  simulation_interface_test.cc
test/individual-robot-behaviour-test/: CMakeLists.txt  ball_test.cc  path_planning_test.cc  state_test.cc
test/simulation-interface-test/: dummy.cc  dummy.h  dummy_test.cc  robot_test.cc  simulation_interface_test.cc
